<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ProLeagues</string>
    <string name="inputLeague">Liga</string>
    <string name="pageLeague">Página principal de la Liga</string>

    <!--              input Liga                        -->
    <string name="titleInsert">Crea tu Liga</string>
    <string name="nametitleInsert">Nombre de la Liga</string>
    <string name="nameInsert"></string>
    <string name="btnCancel">Cancel</string>
    <string name="btnInsert">Insert</string>

    <!--            web views                           -->
    <string name="aboutWebView">Insert</string>
    <string name="DevelopersWebView">Insert</string>

    <!--            menu contextual                      -->
    <string name="delete">Delete</string>
    <string name="irLiga">Ir a la Liga</string>

    <!--               menu principal                    -->
    <string name="salir">Salir</string>
    <string name="atras">Atras</string>
    <string name="info">Info</string>
    <string name="about">About</string>
    <string name="developers">Developers</string>

    <!--                pageLeague                         -->
    <string name="leagueName">Liga</string>

    <!--                calendario                         -->
    <string name="calendario">Calendario</string>

    <!--                calendario                         -->
    <string name="resultados">Calendario</string>

    <!--              jornadas                           -->
    <string name="jornada1">Jornada 1</string>
    <string name="jornada2">Jornada 2</string>
    <string name="jornada3">Jornada 3</string>
    <string name="jornada4">Jornada 4</string>
    <string name="jornada5">Jornada 5</string>
    <string name="jornada6">Jornada 6</string>
    <string name="jornada7">Jornada 7</string>
    <string name="jornada8">Jornada 8</string>
    <string name="jornada9">Jornada 9</string>
    <string name="jornada10">Jornada 10</string>

</resources>
