<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/jornada1" android:title="@string/jornada1"/>
    <item android:id="@+id/jornada2" android:title="@string/jornada2"/>
    <item android:id="@+id/jornada3" android:title="@string/jornada3"/>
    <item android:id="@+id/jornada4" android:title="@string/jornada4"/>
    <item android:id="@+id/jornada5" android:title="@string/jornada5"/>
    <item android:id="@+id/jornada6" android:title="@string/jornada6"/>
    <item android:id="@+id/jornada7" android:title="@string/jornada7"/>
    <item android:id="@+id/jornada8" android:title="@string/jornada8"/>
    <item android:id="@+id/jornada9" android:title="@string/jornada9"/>
    <item android:id="@+id/jornada10" android:title="@string/jornada10"/>
    <item android:id="@+id/atras" android:title="@string/atras"/>
</menu>